WEBUMENIA-719 fix headings overlap

--- a/css/cover.css
+++ b/css/cover.css
@@ -174,6 +174,7 @@ nav .logo-sng {
     font-size: 1.75rem;
     text-align: center;
     margin: auto;
+    max-width: 570px;
   }
   .cover-heading svg { width: 1.75rem; }
 }
@@ -184,6 +185,7 @@ nav .logo-sng {
 }
 @media (min-width: 992px) {
   .cover-heading {
+    max-width: 100%;
     font-size: 2rem;
   }
   .cover-heading svg { width: 2rem; }
